<resources>
    <string name="app_name">FactuApp 1.0</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_saisie_releveindex">Ajout Relevé Index</string>
    <string name="title_activity_modif_releveindex">Modification Relevé</string>
    <string name="n_prise">N° Prise</string>
    <string name="index_fin">Valeur Index</string>
    <string name="etat_prise">Etat Prise</string>
    <string name="observation">Observations</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="annuler">Annuler</string>
    <string name="saisie_releveindex">Ajout relevé index</string>
    <string name="modif_releveindex">Modification relevé</string>
    <string name="secteur">Secteur</string>
    <string name="date_releve">Date Relevé</string>
    <string name="required">Obligatoire</string>
    <string name="index_non_valide">Valeur index non valide</string>
    <string name="title_activity_liste_releveindex">Liste Relevés index</string>
    <string name="liste_releveindex">Liste relevés</string>
    <string name="liste_anciens_releveindex">Anciens relevés</string>
    <string name="id_releveindex">id_releveindex</string>
    <string name="index_fin2">Valeur</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_FragmentAcceuil">Accueil</string>
    <string name="menu_export">Exporter</string>
    <string name="menu_import">Importer</string>
    <string name="n_prise_introuvable">N° Prise introuvable</string>
    <string name="releve_insere_avec_succes">Relevé Index ajouté avec succès</string>
    <string name="renseigner_valeur_index">Veuillez renseigner la valeur d\'index</string>
    <string name="copyright_orsm">\u00a9 COPYRIGHT ORMVA-SM 2019</string>
    <string name="menu_search">Rechercher</string>
    <string name="menu_refresh">Actualiser</string>
    <string name="menu_delete">Supprimer</string>
    <string name="releve_supprime_avec_succe">Relevé supprimé avec succès</string>
    <string name="confirm_delete">Etes vous sûr de vouloir supprimer : %1$s ?</string>
    <string name="delete_record">Supprimer</string>
    <string name="cancel_record">Annuler</string>
    <string name="suppresion"> <b>Suppresion</b></string>
    <string name="cmv">C.M.V</string>
    <string name="serveur">Serveur</string>
    <string name="parametres">Paramètres</string>
    <string name="liste_utilisateur">Utilisateurs</string>
    <string name="code_utilisateur">Code utilisateur</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="code_cmv">C.M.V</string>
    <string name="donnees_non_trouvees">Aucune Donnée trouvée</string>
    <string name="probleme_connexion">Problème de connexion</string>
    <string name="refresh">Rafraîchir</string>
    <string name="title_activity_fragment_import_data">Import données</string>
    <string name="title_activity_fragment_export_data">Export données</string>
    <string name="import_data">Import données</string>
    <string name="importer">Importer Anciens Index</string>
    <string name="import_data_msg">Aucun CMV et/ou Utilisateur trouvé(s)</string>
    <string name="export_data">Export données</string>
    <string name="exporter">Exporter</string>
    <string name="liste_prise">Liste prises</string>
    <string name="code_prise">Code prise</string>
    <string name="num_prise">N° prise</string>
    <string name="antenne">Antenne</string>
    <string name="donnees_importees_avec_succes">Données importées avec succès</string>
    <string name="donnees_exportees_avec_succes">Données exportées avec succès</string>
    <string name="title_import">Import</string>
    <string name="title_export">Export</string>
    <string name="title_err_import">Erreur Import</string>
    <string name="title_err_export">Erreur Export</string>
    <string name="nb_total_prises">Nombre total de prises : </string>
    <string name="nb_total_releves">Nombre total de relevés : </string>
    <string name="confirm_import_anciens_index">Vous êtes sûr de vouloir importer les anciens index. Attention : Tous les relevés d\'index existants seront supprimés ?  </string>
    <string name="confirm_export_releves_index">Vous êtes sûr de vouloir exporter les relevés d\'index saisis ?  </string>
    <string name="title_activity_login">Se connecter</string>
    <string name="prompt_utilisateur">Nom utilisateur</string>
    <string name="prompt_motdepasse">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="title_login">Connexion</string>
    <string name="title_logout">Déconnexion</string>
    <string name="welcome">"Bienvenu !"</string>
    <string name="invalid_username">Nom d\'utlisateur ou Mot de passe non valide</string>
    <string name="login_failed">"Connexio échouée"</string>
    <string name="invalid_password">"Connexion échouée"</string>
    <string name="confirm_logout">Êtes-vous sûr(e) de vouloir vous déconnecter? </string>
    <string name="deconnexion">Déconnexion</string>
    <string name="sedeconnecter">Se déconnecter</string>
    <string name="user_not_authorized_for_this_device">Utilisateur non autorisé pour cet appareil</string>
    <string name="savedb">Sauvegarder Base de données</string>
    <string name="aiguadier">Aiguadier</string>
    <string name="dumpdb_ok">Sauvegarde réalisée avec succès</string>
    <string name="dumpdb_error">Erreur de sauvegarde</string>

</resources>
