<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_send"
            android:title="@string/menu_export" />
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_receive"
            android:title="@string/menu_import" />
        <item
            android:id="@+id/nav_saisie_releve"
            android:icon="@drawable/ic_add"
            android:title="@string/saisie_releveindex" />
        <item
            android:id="@+id/nav_listeReleves"
            android:icon="@drawable/ic_liste"
            android:title="@string/liste_releveindex" />
        <item
            android:id="@+id/nav_listePrises"
            android:icon="@drawable/ic_prise"
            android:title="@string/liste_prise" />


    </group>

    <item android:title="Paramètres">
        <menu>
            <item
                android:id="@+id/nav_parametres"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/parametres" />
            <item
                 android:id="@+id/nav_utilisateurs"
                 android:icon="@drawable/ic_people_black_24dp"
                 android:title="@string/liste_utilisateur" />
        </menu>
    </item>

</menu>
