<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">
    >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:padding="10sp"
        android:gravity="left"
        android:text="@string/n_prise"
        android:textStyle="bold"
        android:background="@color/grey_300"
        android:layout_weight="40"
        >
    </TextView>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:padding="10sp"
        android:gravity="left"
        android:text="@string/etat_prise"
        android:textStyle="bold"
        android:background="@color/grey_300"
        android:layout_weight="30"
        >
    </TextView>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:padding="10sp"
        android:gravity="left"
        android:text="@string/index_fin"
        android:textStyle="bold"
        android:background="@color/grey_300"
        android:layout_weight="30"
        >
    </TextView>


</LinearLayout>