<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">
    >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:gravity="left"
        android:text="@string/code_utilisateur"
        android:textStyle="bold"
        android:background="@color/grey_300"
        android:layout_weight="35"
        >
    </TextView>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:gravity="left"
        android:text="@string/utilisateur"
        android:textStyle="bold"
        android:background="@color/grey_300"
        android:layout_weight="50"
        >
    </TextView>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:gravity="left"
        android:text="@string/code_cmv"
        android:textStyle="bold"
        android:background="@color/grey_300"
        android:layout_weight="15"
        >
    </TextView>



</LinearLayout>