<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    tools:context=".FragmentAcceuil">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txttitre"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo2" />

            <TextView
                android:id="@+id/txttitre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:layout_marginBottom="40dp"
                android:text="GESTION DE LA FACTURATION \nDE L'EAU D'IRRIGATION"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="25dp"
                android:textStyle="bold" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/infousercmv"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/footer"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/bg_rectangle">

            <TextView
                android:id="@+id/cmv"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:paddingTop="10dp"
                android:text="@string/cmv"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/utilisateur"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/cmv"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:text="@string/aiguadier"
                android:textSize="18dp"
                android:textStyle="bold" />

        </RelativeLayout>




    </LinearLayout>
</ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/copyright_orsm"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="15dp"
            android:textStyle="bold" />

    </RelativeLayout>
</RelativeLayout>
