<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        tools:context=".FragmentImportData">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="10dp"

                >

                <TextView
                    android:id="@+id/lblcmv"
                    android:layout_width="114dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:text="@string/cmv"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtcmv"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/lblcmv"
                    android:background="@drawable/bg_textview"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textColor="#2196F3"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblUtilisateur"
                    android:layout_width="114dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:text="@string/utilisateur"
                    android:layout_below="@id/lblcmv"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtUtilisateur"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_below="@id/txtcmv"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/lblUtilisateur"
                    android:background="@drawable/bg_textview"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textColor="#2196F3"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/lblUtilisateur"
                    android:src="@drawable/import_data"
                    android:layout_marginTop="20dp"
                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"

                >

                <Button
                    android:id="@+id/btnimportdata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:background="#1E88E5"
                    android:text="@string/importer"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="10dp">
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:progressDrawable="@drawable/circular_progressbar_view"
                    android:indeterminateDrawable="@drawable/circular_progressbar_view"
                    android:background="@drawable/circle_shape"/>

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>